--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
-GEMINI_API_KEY=your_gemini_api_key_here
+TELEGRAM_BOT_TOKEN=8523857587:AAEdH8zWdaGhoKSF3oUbgY-VhzPDHlz2iGI
+GEMINI_API_KEY=AIzaSyAMF0F9gFAn7PUW29ut0RQmwTtXmz-N7qY
